[project]
name = "tiktok-ugc-pipeline"
version = "2.0.0"
description = "UGC Fashion Pipeline — Nano Banana 2 + Veo 3.1 Lite + ElevenLabs"
requires-python = ">=3.11"
dependencies = [
    "firebase-admin>=6.0.0",
    "google-generativeai>=0.8.0",
    "google-genai>=0.5.0",
    "pydantic>=2.0.0",
    "python-dotenv>=1.0.0",
    "moviepy>=2.0.0",
    "pillow>=10.0.0",
    "elevenlabs>=1.0.0",
    "langgraph>=0.2.0",
]

[project.optional-dependencies]
vertex = [
    "google-cloud-aiplatform>=1.60.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = ["pytest>=8.0.0"]

[tool.uv]
package = false
